# DobutsuShogi

./: .gitignore  Cargo.toml  LICENSE  README.md  SPEC.md  run.sh
.github/workflows/: deploy.yml
src/: codec.rs  game.rs  lib.rs  rules.rs  search.rs  wasm.rs
web/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: board.test.ts  board.ts  game.test.ts  game.ts  main.ts  move-codec.test.ts  move-codec.ts  pieces.test.ts  pieces.ts  style.css
