[package]
name = "dobutsu_shogi"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
tsify-next = { version = "0.5", features = ["js"] }

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
